# Data-Modeling

./: .gitignore  README.md  pyproject.toml
.kiro/settings/: mcp.json
.kiro/specs/virtual-waiting-room/: .config.kiro  design.md  nosql-workbench-model.json  requirements.md  tasks.md
infra/: README.md  app.py  cdk.json  requirements.txt  waiting_room_stack.py
screenshots/: README.md
scripts/: live_api_test.py  live_smoke.py  load_test.py
submission/: README.md  access-pattern-matrix.md  design-document.md
tests/: conftest.py  test_admission_properties.py  test_capacity_properties.py  test_config.py  test_dal_unit.py  test_integration.py  test_invariant_properties.py  test_lifecycle_manager_unit.py  test_load_smoke.py  test_logic_properties.py  test_ordering_properties.py  test_promoter_properties.py  test_promoter_shard_padding.py  test_provisioning.py  test_status_logic_properties.py  test_status_reader_unit.py
waiting_room/: __init__.py  active_pool.py  admission.py  aggregator.py  backoff.py  batching.py  capacity.py  config.py  handlers.py  lifecycle.py  lifecycle_manager.py  ordering.py  position.py  promoter.py  provisioning.py  sharding.py  status_logic.py  status_reader.py  token.py
