[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waiting-room"
version = "0.1.0"
description = "DynamoDB-backed Virtual Waiting Room that fairly queues millions of fans for a high-demand ticket sale."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "boto3==1.34.144",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.2",
    "hypothesis==6.108.5",
    "moto[dynamodb]==5.0.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["waiting_room*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.hypothesis]
# Property tests in this project run at least 100 iterations per the plan.
max_examples = 100
